--- a/mandelbulber2/formula/ui/transf_difs_box.ui
+++ b/mandelbulber2/formula/ui/transf_difs_box.ui
@@ -480,7 +480,7 @@
             </widget>
            </item>
            <item row="3" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetR_0">
+            <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_0">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                <horstretch>0</horstretch>
